manifest/checkout-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout-deployment
  labels:
    app: checkout-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkout-service
  template:
    metadata:
      labels:
        app: checkout-service
    spec:
      containers:
      - name: checkout-service
        image: sharmila231/checkout-service:82f39779368f6a6a4c80fef421914b3c82e28f07
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: checkout-service
spec:
  selector:
    app: checkout-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
