manifest/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
  labels:
    app: payment-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
      - name: payment-service
        image: sharmila231/payment-service:27a5c61b10de0cf170641a80c8b702b0790e0830
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  selector:
   app: payment-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
